image-carousel component added

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -155,6 +155,9 @@ button{
 .modal-content img{
     max-width: 100%;
 }
+.image-carousel img{
+    width: 100%;
+}
 body.modal-open{
     overflow: hidden;
     position: fixed;
