--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2593,6 +2593,9 @@ button{
 .modal-content img{
     max-width: 100%;
 }
+.image-carousel img{
+    width: 100%;
+}
 body.modal-open{
     overflow: hidden;
     position: fixed;
